Added toast notification

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,6 @@
 <main class="content">
   <p>Welcome to our Angular Progressive Web App!</p>
 </main>
+
+<!-- Toast -->
+<app-toast #toast></app-toast>
