--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,7 +18,7 @@
     border: none;
     padding: 0.5rem 1rem;
     font-weight: bold;
-    border-radius: 6px;
+    border-radius: 0.375rem;
     cursor: pointer;
     transition: background 0.3s ease;
 
