--- a/src/app/components/toast/toast.component.scss
+++ b/src/app/components/toast/toast.component.scss
@@ -7,11 +7,11 @@
     color: #fff;
     font-weight: 500;
     box-shadow: 0 0.125rem 0.375rem rgba(0, 0, 0, 0.2);
-    z-index: 1000;
+    z-index: 1000; //very high value so that toast goes over everything else
     opacity: 0.95;
-    animation: fadeInOut 3s forwards;
-  
-    &.success {
+    animation: fadeInOut 3s forwards; //forwards : The target will retain the computed values set by 
+                                      //the last keyframe encountered during execution.
+    &.success {                       //this is so that animation doesn't reset to its starting position when 3s is over
       background-color: #4caf50;
     }
   
@@ -21,9 +21,9 @@
   }
   
   @keyframes fadeInOut { // Fade in and out animation
-    0% { opacity: 0; transform: translateY(1.25rem); }
-    10% { opacity: 1; transform: translateY(0); }
-    90% { opacity: 1; }
-    100% { opacity: 0; transform: translateY(1.25rem); }
+    0% { opacity: 0; transform: translateY(1.25rem); } //invisible from bottom
+    10% { opacity: 1; transform: translateY(0); } //goes up to default position, now visible
+    90% { opacity: 1; } //stays visible
+    100% { opacity: 0; transform: translateY(1.25rem); } //goes back down again and stays there (forwards)
   }
   
